--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,11 @@ a {
   color: #434455;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .link-adres:hover,
 .link-adres:focus {
   color: #404bbf;
 }
-
 .linktext:hover,
 .linktext:focus {
   color: #404bbf;
@@ -51,11 +51,21 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: #404bbf;
   padding-top: 24px;
   padding-bottom: 24px;
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.linktext::after {
+  content: '';
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
 body {
   font-family: "Roboto", sans-serif;
@@ -219,7 +229,8 @@ ul {
   border-bottom: 1px solid #e7e9fc;
   padding: 24px 0;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+              0px 1px 1px rgba(46, 47, 66, 0.16), 
+              0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-info {
   display: flex;
