--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,88 @@
-.border:before,
-.border:after {
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.container {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+img {
+  display: block;
+}
+
+/* BODY */
+
+body {
+  font-family: "Roboto", sans-serif;
+  color: #434455;
+  background-color: #ffffff;
+}
+
+/* HEADER */
+
+.header-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 72px;
+  border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+header {
+  background-color: #ffffff;
+}
+.logo {
+  font-family: "Raleway", sans-serif;
+  text-decoration: none;
+  padding: 24px 0;
+  display: inline-block;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-right: 76px;
+}
+.webcolor {
+  color: #4d5ae5;
+}
+.studiocolor {
+  color: #2e2f42;
+}
+.header-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.navi {
+  display: flex;
+  align-items: center;
+}
+.navi-list {
+  list-style-type: none;
+  display: flex;
+  gap: 40px;
+}
+.navi-list-item {
+  font-weight: 500;
+}
+.navi-link {
+  list-style-type: none;
+  text-decoration: none;
+  padding: 24px 0;
+  display: inline-block;
+  color: #2e2f42;
+}
+.navi-studio {
+  position: relative;
+  color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.navi-studio::after {
   content: "";
   width: 100%;
   position: absolute;
@@ -9,311 +92,66 @@
   background-color: #404bbf;
   border-radius: 2px;
 }
-.logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #4d5ae5;
-  margin-right: 76px;
-}
-.studio {
-  color: #2e2f42;
-}
-.text-adres {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5em;
-  letter-spacing: 0.02em;
+.contacts {
   font-style: normal;
-}
-a {
-  text-decoration: none;
-}
-.link-adres {
   color: #434455;
+  font-size: 400;
+}
+.contacts-list {
+  display: flex;
+  gap: 40px;
+  list-style-type: none;
+}
+.contact-link {
+  color: #434455;
+  text-decoration: none;
+  padding: 24px 0;
+  display: inline-block;
+  color: #2e2f42;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link-adres:hover,
-.link-adres:focus {
+.contact-link:hover,
+.contact-link:focus {
   color: #404bbf;
 }
-.linktext:hover,
-.linktext:focus {
-  color: #404bbf;
-}
-.linktext {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #404bbf;
-  padding-top: 24px;
-  padding-bottom: 24px;
-  position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.linktext::after {
-  content: '';
-  width: 100%;
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  height: 4px;
-  background-color: #404bbf;
-  border-radius: 2px;
-}
-body {
-  font-family: "Roboto", sans-serif;
-  background-color: #fff;
-  color: #434455;
-}
-ul {
-  list-style: none;
-  margin: 0;
-  padding-left: 0;
-}
-.first-head {
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  font-size: 56px;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #ffffff;
-  max-width: 496px;
-  margin: 0 auto;
-  margin-bottom: 48px;
-}
-.button-order-service {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  text-align: center;
-  color: #fff;
-  background-color: #4d5ae5;
-  cursor: pointer;
-  display: block;
-  min-width: 169px;
-  height: 56px;
-  border: none;
-  border-radius: 4px;
-  margin: 0 auto;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.button-order-service:focus,
-.button-order-service:active {
-  color: #404bbf;
-  background-color: #404bbf;
-}
-.title-box {
-  background-color: #2e2f42;
-  padding-top: 188px;
-  padding-bottom: 188px;
+
+/* SEKCJA PIERWSZA */
+.hero {
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office.jpg);
+    url(/images/heroimage.jpg);
   max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  margin: 0 auto;
 }
-.head-work-rules {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  margin-bottom: 8px;
-}
-.paragraph-work-rules {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-}
-.employe-head {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2e2f42;
-  margin-bottom: 8px;
-}
-.employe-job {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-  text-align: center;
-  padding-bottom: 8px;
-}
-.head-ourportfolio {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  margin-bottom: 8px;
-}
-.paragraph-ourportfolio {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-}
-.second-head {
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  text-align: center;
-  color: #2e2f42;
-  margin-bottom: 72px;
-}
-.section-our-team {
-  background-color: #f4f4fd;
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-.list-item-ourteam {
+
+.inline-row {
   display: flex;
-  gap: 24px;
+  gap: 40px;
+  margin-right: 0;
+  list-style-type: none;
 }
-.item-ourteam {
+
+.inline {
   background-color: #ffffff;
+  display: inline;
+  gap: 40px;
   flex-basis: calc((100% - 72px) / 4);
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 }
-.text-footer {
-  background-color: #2e2f42;
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-.footer-studio {
-  color: #f4f4fd;
-}
-.footer-paragraph {
-  line-height: 1.5;
-  color: #f4f4fd;
+.slogan {
+  max-width: 496px;
+  font-size: 56px;
+  line-height: 1.07;
   letter-spacing: 0.02em;
-  max-width: 264px;
-}
-.header-styles {
-  border-bottom: 1px solid #e7e9fc;
-  padding: 24px 0;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-              0px 1px 1px rgba(46, 47, 66, 0.16), 
-              0px 1px 6px rgba(46, 47, 66, 0.08);
-}
-.header-info {
-  display: flex;
-}
-.container {
-  max-width: 1158px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-.navigating {
-  display: flex;
-  align-items: center;
-  margin-right: auto;
-}
-.menu {
-  display: flex;
-  gap: 40px;
-}
-.contacts {
-  display: flex;
-  gap: 40px;
-}
-.characteristics-organization {
-  display: flex;
-  gap: 24px;
-}
-.work-rules {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-.work-rules-item {
-  flex-basis: calc((100% - 72px) / 4);
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
-}
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-.employe {
-  padding: 32px 0px;
-}
-.section-our-portfolio {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-.list-item-ourportfolio {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 24px;
-  row-gap: 48px;
-}
-.item-ourportfolio {
-  width: calc((100% - 48px) / 3);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.item-ourportfolio:hover {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-}
-.app {
-  padding: 32px 16px 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
-}
-.logo-footer {
-  font-family: "Raleway", sans-serif;
+  text-align: center;
   font-weight: 700;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #4d5ae5;
-  display: inline-block;
-  margin-bottom: 16px;
+  margin: 0 auto;
+  padding-bottom: 48px;
 }
 .visually-hidden {
   position: absolute;
@@ -327,74 +165,269 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-.icons {
+
+.effective {
+  padding: 188px 0 188px;
+  color: #ffffff;
+  font-size: 56px;
+  font-weight: 700;
+  background-color: #2e2f42;
+  text-align: center;
+}
+.btn {
+  display: block;
+  background-color: #4d5ae5;
+  color: #ffffff;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  cursor: pointer;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
+  margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn:active {
+  background-color: #404bbf;
+}
+.btn:focus {
+  background-color: #404bbf;
+}
+.btn:hover {
+  background-color: #404bbf;
+}
+
+/* SEKCJA DRUGA */
+
+h3 {
+  color: #2e2f42;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+h2 {
+  text-align: center;
+}
+p {
+  color: #434455;
+  letter-spacing: 0.02em;
+}
+
+.motto {
+  color: #2e2f42;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 120px 0;
+}
+.motto-images {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 112px;
   background-color: #f4f4fd;
   border-radius: 4px;
+  border: 1px solid #8e8f99;
   margin-bottom: 8px;
 }
-.social-media {
-  display: flex;
+
+/* SEKCJA TRZECIA */
+
+.our-team {
+  margin-bottom: 72px;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+.social-item {
+  width: 40px;
+  height: 40px;
+}
+.personel {
+  text-align: center;
+  margin-bottom: 8px;
+}
+.personel-div {
+  padding: 32px 0;
+}
+.personel-box {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.social-links-personel {
   justify-content: center;
   gap: 24px;
-}
-.footer-social-media {
-  display: block;
-  justify-content: center;
-  gap: 16px;
-}
-.footer-list-social-media {
+  list-style-type: none;
   display: flex;
-  gap: 16px;
 }
-.employe-social-media {
-  width: 40px;
-  height: 40px;
-}
-.footer-item-social-media {
-  width: 40px;
-  height: 40px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.media {
+
+.social-media-icon {
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
-  border-radius: 50%;
   display: flex;
+  border-radius: 50%;
   align-items: center;
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.media-footer {
-  width: 100%;
-  height: 100%;
-  background-color: #4d5ae5;
-  border-radius: 50%;
+.social-media-icon:hover {
+  background-color: #404bbf;
+}
+.social-media-icon:focus {
+  background-color: #404bbf;
+}
+
+.icon {
+  fill: #f4f4fd;
+}
+.team {
+  background-color: #f4f4fd;
+  color: 2e2f42;
+  padding: 120px 0 120px;
+}
+.job-position {
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: #434455;
+}
+
+.titles {
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  margin-bottom: 8px;
+}
+.title-text {
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+.horizontal {
   display: flex;
-  align-items: center;
+  list-style-type: none;
+  gap: 24px;
+}
+
+/* SEKCJA CZWARTA */
+.apps {
+  margin-bottom: 8px;
+}
+
+.horizontal-portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  gap: 24px;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+.inline-portfolio {
+  width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  /* transition-timing-function: ease-out;
+  transition-duration: 500ms; */
+}
+.inline-portfolio:hover .img-description {
+  transform: translateY(0);
+}
+
+.name-category {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+.img-container {
+  display: flex;
+  position: relative;
+  overflow: hidden;
+  max-width: 360px;
   justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  align-items: center;
+  margin: 0 auto;
 }
-.media:hover {
-  background-color: #404bbf;
+.img-description {
+  position: absolute;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  padding: 40px 32px;
+  transform: translateY(100%);
+  margin: 0px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.media:focus {
-  background-color: #404bbf;
+
+.our-portfolio {
+  margin-bottom: 72px;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
 }
-.media-footer:hover {
-  background-color: #31d0aa;
+.portfolio {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  color: #2e2f42;
 }
-.media-footer:focus {
-  background-color: #31d0aa;
+
+/* FOOTER */
+
+.fstudio {
+  color: #f4f4fd;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
 }
-.footer-logo-and-p {
+.footerlogo {
+  text-decoration: none;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  display: inline-block;
+  margin-bottom: 16px;
+}
+.footer {
+  padding: 100px 0;
+  background-color: #2e2f42;
+}
+.footerdiv {
+  display: flex;
+  align-items: baseline;
+}
+.logo-paragraph {
   margin-right: 120px;
 }
-.foot-p-socialmedia {
+.pfooter {
+  color: #f4f4fd;
+  font-family: "Roboto", sans-serif;
+  max-width: 264px;
+  font-size: 16px;
+  line-height: 1.5;
+}
+.social-medias {
+  display: flex;
+  align-items: baseline;
+}
+.social-media-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -402,43 +435,40 @@ img {
   color: #ffffff;
   margin-bottom: 16px;
 }
-.container-footer {
-  max-width: 1158px;
-  margin: 0 auto;
-  padding: 0 15px;
-  display: flex;
-  align-items: baseline;
-}
-.footer-icon {
-  fill: #f4f4fd;
-}
-.media-icon {
-  fill: #f4f4fd;
-}
-.text-on-image {
-  position: absolute;
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  padding: 40px 32px;
+.social-item-footer {
+  width: 40px;
+  height: 40px;
   background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.social-media-icon-footer:hover {
+  background-color: #31d0aa;
+}
+.social-media-icon-footer:active {
+  background-color: #31d0aa;
+}
+.social-media-icon-footer:focus {
+  background-color: #31d0aa;
+}
+.icon-footer {
+  fill: #f4f4fd;
+}
+.social-media-icon-footer {
+  width: 100%;
   height: 100%;
-  weight: 100%;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  top: 0;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.show-text-on-images {
-  overflow: hidden;
-  position: relative;
-}
-.item-ourportfolio:hover .text-on-image {
-  transform: translateY(0%);
-}
-.one {
-  color: #404bbf;
+.social-links {
+  display: flex;
+  gap: 16px;
 }
