--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ header {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(/images/heroimage.jpg);
+    url(../images/heroimage.jpg);
   max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
@@ -171,8 +171,9 @@ header {
   color: #ffffff;
   font-size: 56px;
   font-weight: 700;
-  background-color: #2e2f42;
+  background-color: rgba(46, 47, 66, 0.7);
   text-align: center;
+  margin: auto;
 }
 .btn {
   display: block;
@@ -426,6 +427,8 @@ p {
 .social-medias {
   display: flex;
   align-items: baseline;
+  flex-direction: column; 
+  align-items: flex-start;
 }
 .social-media-text {
   font-weight: 500;
